<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical = "true"
        android:layout_marginTop="15dp"
        android:text="@string/edit_album"
        android:textSize="34sp"
        android:textStyle="italic" />

    <EditText
        android:id="@+id/albumName"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/new_name"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textColorHint="@color/colorPrimary"
        android:layout_gravity="center"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_weight="1"
        android:visibility="visible">

        <Button
            android:id="@+id/create"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/edit" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/cancel"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>
</LinearLayout>